--- a/Belajar-Membuat-Front-End-Web-untuk-Pemula/addEventListener/index.html
+++ b/Belajar-Membuat-Front-End-Web-untuk-Pemula/addEventListener/index.html
@@ -18,9 +18,9 @@
       }
     </style>
   </head>
-  <body onload="welcome()">
+  <body>
     <div class="contents" align="center" hidden>
-      <button id="incrementButton" onclick="increment()">Tekan Aku :)</button>
+      <button id="incrementButton">Tekan Aku :)</button>
       <h3>
         Kamu sudah menekan tombol di atas sebanyak <span id="count">0</span>
       </h3>
@@ -34,8 +34,10 @@
           const hiddenMessage = document.createElement("h4");
           hiddenMessage.innerText =
             "Selamat! Anda menemukan hadiah tersembunyi...";
+
           const image = document.createElement("img");
           image.setAttribute("src", "https://i.ibb.co/0V49VRZ/catto.jpg");
+
           const contents = document.querySelector(".contents");
           contents.appendChild(hiddenMessage).appendChild(image);
         }
@@ -47,8 +49,11 @@
         contents.removeAttribute("hidden");
       }
 
-      // document.getElementById('incrementButton').onclick = increment;
-      // document.body.onload = welcome;
+      // kita akan menulis kode menggunakan addEventListener di sini
+      window.addEventListener("load", welcome);
+      document
+        .getElementById("incrementButton")
+        .addEventListener("click", increment);
     </script>
   </body>
 </html>
