--- a/submission/bookshelf-app-starter-project/index.html
+++ b/submission/bookshelf-app-starter-project/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf App</title>
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Impor script kamu di sini -->
     <!-- Lampirkan `defer` jika pemanggilan dilakukan dalam <head> -->
@@ -18,18 +19,38 @@
       <section>
         <h2>Tambah Buku Baru</h2>
         <form id="bookForm" data-testid="bookForm">
+          <input type="hidden" id="bookId" />
+
           <div>
             <label for="bookFormTitle">Judul</label>
-            <input id="bookFormTitle" type="text" required data-testid="bookFormTitleInput" />
+            <input
+              id="bookFormTitle"
+              type="text"
+              required
+              data-testid="bookFormTitleInput"
+            />
           </div>
+
           <div>
             <label for="bookFormAuthor">Penulis</label>
-            <input id="bookFormAuthor" type="text" required data-testid="bookFormAuthorInput" />
+            <input
+              id="bookFormAuthor"
+              type="text"
+              required
+              data-testid="bookFormAuthorInput"
+            />
           </div>
+
           <div>
             <label for="bookFormYear">Tahun</label>
-            <input id="bookFormYear" type="number" required data-testid="bookFormYearInput" />
+            <input
+              id="bookFormYear"
+              type="number"
+              required
+              data-testid="bookFormYearInput"
+            />
           </div>
+
           <div>
             <label for="bookFormIsComplete">Selesai dibaca</label>
             <input
@@ -38,8 +59,41 @@
               data-testid="bookFormIsCompleteCheckbox"
             />
           </div>
-          <button id="bookFormSubmit" type="submit" data-testid="bookFormSubmitButton">
+
+          <!-- tombol default (tambah buku) -->
+          <button
+            id="bookFormSubmit"
+            type="submit"
+            data-testid="bookFormSubmitButton"
+          >
             Masukkan Buku ke rak <span>Belum selesai dibaca</span>
+          </button>
+
+          <!-- tombol mode edit -->
+          <button
+            id="updateBookButton"
+            type="button"
+            style="
+              display: none;
+              background-color: green;
+              color: white;
+              margin-left: 8px;
+            "
+          >
+            Update Buku
+          </button>
+
+          <button
+            id="bookFormCancel"
+            type="button"
+            style="
+              display: none;
+              background-color: blue;
+              color: white;
+              margin-left: 8px;
+            "
+          >
+            Batal Edit
           </button>
         </form>
       </section>
@@ -48,8 +102,17 @@
         <h2>Cari Buku</h2>
         <form id="searchBook" data-testid="searchBookForm">
           <label for="searchBookTitle">Judul</label>
-          <input id="searchBookTitle" type="text" data-testid="searchBookFormTitleInput" />
-          <button id="searchSubmit" type="submit" data-testid="searchBookFormSubmitButton">
+          <input
+            id="searchBookTitle"
+            type="text"
+            data-testid="searchBookFormTitleInput"
+            placeholder="Cari buku.."
+          />
+          <button
+            id="searchSubmit"
+            type="submit"
+            data-testid="searchBookFormSubmitButton"
+          >
             Cari
           </button>
         </form>
@@ -68,7 +131,9 @@
             <p data-testid="bookItemAuthor">Penulis: Penulis Buku 1</p>
             <p data-testid="bookItemYear">Tahun: 2030</p>
             <div>
-              <button data-testid="bookItemIsCompleteButton">Selesai dibaca</button>
+              <button data-testid="bookItemIsCompleteButton">
+                Selesai dibaca
+              </button>
               <button data-testid="bookItemDeleteButton">Hapus Buku</button>
               <button data-testid="bookItemEditButton">Edit Buku</button>
             </div>
@@ -89,7 +154,9 @@
             <p data-testid="bookItemAuthor">Penulis: Penulis Buku 2</p>
             <p data-testid="bookItemYear">Tahun: 2030</p>
             <div>
-              <button data-testid="bookItemIsCompleteButton">Selesai dibaca</button>
+              <button data-testid="bookItemIsCompleteButton">
+                Selesai dibaca
+              </button>
               <button data-testid="bookItemDeleteButton">Hapus Buku</button>
               <button data-testid="bookItemEditButton">Edit Buku</button>
             </div>
