--- a/submission/bookshelf-app-starter-project/index.html
+++ b/submission/bookshelf-app-starter-project/index.html
@@ -66,7 +66,7 @@
             type="submit"
             data-testid="bookFormSubmitButton"
           >
-            Masukkan Buku ke rak <span>Belum selesai dibaca</span>
+            Tambah
           </button>
 
           <!-- tombol mode edit -->
@@ -102,6 +102,7 @@
         <h2>Cari Buku</h2>
         <form id="searchBook" data-testid="searchBookForm">
           <label for="searchBookTitle">Judul</label>
+
           <input
             id="searchBookTitle"
             type="text"
@@ -116,6 +117,9 @@
             Cari
           </button>
         </form>
+        <p id="noResultMessage" style="display: none; color: red">
+          Tidak ada buku yang ditemukan
+        </p>
       </section>
 
       <section>
